--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
-    <script defer src="/js/nav.js"></script>
-    <script defer src="/js/scroll-header.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="nav.js"></script>
+    <script defer src="scroll-header.js"></script>
     <script defer src="/js/lock-scroll.js"></script>
     <script defer src="/js/projects.js"></script>
     <script defer src="/js/skill-card.js"></script>
