fix index.html formatting

--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Philipus Dibyan</title>
-    <link rel="icon" href="/assets/phiIcon.png" type="image/x-icon" />
+    <link rel="icon" href="assets/philIcon.png" type="image/x-icon" />
+
+    <!-- External CSS -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
-    <script defer src="/js/nav.js"></script>
-    <script defer src="/js/scroll-header.js"></script>
-    <script defer src="/js/lock-scroll.js"></script>
-    <script defer src="/js/projects.js"></script>
-    <script defer src="/js/skill-card.js"></script>
-    <script defer src="/js/sendgmail.js"></script>
-    <script defer src="/js/lightmode.js"></script>
+
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Local JS -->
+    <script defer src="js/nav.js"></script>
+    <script defer src="js/scroll-header.js"></script>
+    <script defer src="js/lock-scroll.js"></script>
+    <script defer src="js/projects.js"></script>
+    <script defer src="js/skill-card.js"></script>
+    <script defer src="js/sendgmail.js"></script>
+    <script defer src="js/lightmode.js"></script>
+    <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/4d915355b3.js"
       crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <img src="/assets/logophiidev-trans.png" alt="Logo" class="mainIcon" />
+      <img src="assets/logophiidev-trans.png" alt="Logo" class="mainIcon" />
       <i class="bx bx-menu" id="menu-icon"></i>
 
       <nav>
@@ -56,7 +63,7 @@
       <!-- Button Box CV -->
       <div class="cv-box">
         <a
-          href="/assets/cv-philipusdibyantoro.pdf"
+          href="assets/cv-philipusdibyantoro.pdf"
           target="_blank"
           class="cv-button"
           >📄 Checkout my CV</a
@@ -68,7 +75,7 @@
         <div class="about-container">
           <!-- Kolom foto -->
           <div class="about-photo">
-            <img src="/assets/profil-about.jpg" alt="Profile Photo" />
+            <img src="assets/profil-about.jpg" alt="Profile Photo" />
           </div>
           <!-- Kolom teks -->
           <div class="about-text">
@@ -104,7 +111,7 @@
           <div style="--i: 1" class="skill-card">
             <span class="icon">🗄️</span>
             <h4>Database</h4>
-            <p>MySQL, MongoDB </p>
+            <p>MySQL, MongoDB</p>
           </div>
 
           <!-- skills to be continued 
