fix: Fix commit message and update file paths

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <main>
       <p class="typing-text">Hi everyone, my name is</p>
       <h1 class="gradient-text">Philipus Dibyan</h1>
-      <h1 class="bannerh1">I'm a Passionate Junior Fullstack Developer.</h1>
+      <h1 class="bannerh1">I'm a Passionate Junior Web Developer</h1>
       <p class="abouth1">
-        Building scalable web apps with frontend and backend expertise, and
-        currently expanding my skills in cybersecurity
-        <span style="color: aliceblue">(Blue Team).</span>
+        Building scalable web apps with frontend and backend expertise. <!--, and
+        currently expanding my skills in cybersecurity 
+        <span style="color: aliceblue">(Blue Team).</span> -->
       </p>
 
       <!-- Button Box CV -->
@@ -104,7 +104,7 @@
             <span class="icon">💻</span>
             <h4>Fullstack Development</h4>
             <p>
-              JavaScript (ES6+), React.js, Node.js, Laravel, Flutter, REST API
+              JavaScript (ES6+), React.js, Node.js, REST API
             </p>
           </div>
 
@@ -169,7 +169,7 @@
           <div style="--i: 9" class="skill-card">
             <span class="icon">🌐</span>
             <h4>Networking</h4>
-            <p>Cisco, MikroTik, TCP/IP, VPN Configuration</p>
+            <p>MikroTik, TCP/IP, VPN Configuration</p>
           </div>
         </div>
       </section>
@@ -205,7 +205,7 @@
             </p>
             <ul>
               <li>
-                Installed and configured Cisco and MikroTik network devices
+                Installed and configured MikroTik network devices
               </li>
               <li>Set up and maintained CCTV and DVR systems</li>
               <li>
