--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Philipus Dibyan</title>
-    <link rel="icon" href="assets/philIcon.png" type="image/x-icon" />
+    <link rel="icon" href="assets/phiIcon.png" type="image/x-icon" />
 
     <!-- External CSS -->
     <link
