update assets and index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Button Box CV -->
       <div class="cv-box">
         <a
-          href="assets/cv-philipusdibyantoro.pdf"
+          href="assets/cv-philipusdibyantoro.jpg"
           target="_blank"
           class="cv-button"
           >📄 Checkout my CV</a
