update index.html to include new project links and assets

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <h1 class="gradient-text">Philipus Dibyan</h1>
       <h1 class="bannerh1">I'm a Passionate Junior Web Developer</h1>
       <p class="abouth1">
-        Building scalable web apps with frontend and backend expertise. <!--, and
+        Building scalable web apps with frontend and backend expertise.
+        <!--, and
         currently expanding my skills in cybersecurity 
         <span style="color: aliceblue">(Blue Team).</span> -->
       </p>
@@ -103,9 +104,7 @@
           <div style="--i: 0" class="skill-card">
             <span class="icon">💻</span>
             <h4>Fullstack Development</h4>
-            <p>
-              JavaScript (ES6+), React.js, Node.js, REST API
-            </p>
+            <p>JavaScript (ES6+), React.js, Node.js, REST API</p>
           </div>
 
           <div style="--i: 1" class="skill-card">
@@ -204,9 +203,7 @@
               as well as office equipment setup.
             </p>
             <ul>
-              <li>
-                Installed and configured MikroTik network devices
-              </li>
+              <li>Installed and configured MikroTik network devices</li>
               <li>Set up and maintained CCTV and DVR systems</li>
               <li>
                 Provided technical support for printers, PCs, and network
@@ -281,6 +278,58 @@
                 authentication.
               </p>
               <a href="#" target="_blank" class="project-link"
+                >🔗 View Project</a
+              >
+            </div>
+          </div>
+
+          <div
+            class="project-card"
+            style="background-image: url('assets/logophiidev-trans.png')">
+            <div class="project-overlay">
+              <h4>Landing Page Website</h4>
+              <p>
+                A modern responsive portfolio website designed using HTML, CSS,
+                and JavaScript with smooth animations and interactive UI
+                components.
+              </p>
+              <a href="#" target="_blank" class="project-link"
+                >🔗 View Project</a
+              >
+            </div>
+          </div>
+
+          <div
+            class="project-card"
+            style="background-image: url('assets/content-assets.jpg')">
+            <div class="project-overlay">
+              <h4 style="color: yellowgreen;">Creator Instagram</h4>
+              <p>
+                A personal Instagram page showcasing my design and photography
+                work. It features a curated feed with posts, stories highlights,
+                and contact information.
+              </p>
+              <a href="https://www.instagram.com/endlesspersebaya?igsh=MW9rdmsyMzZ0cDRwNg==" target="_blank" class="project-link"
+                >🔗 View Project</a
+              >
+            </div>
+          </div>
+
+          <div
+            class="project-card"
+            style="background-image: url('assets/photography-assets.jpg')">
+            <div class="project-overlay">
+              <h4>Photography</h4>
+              <p>
+                My photography portfolio includes product photography,
+                portraits, and event photography. It showcases my expertise in I
+                am skilled at capturing moments and creating soft images before
+                applying editing effects.
+              </p>
+              <a
+                href="https://drive.google.com/drive/folders/1iEwqF6ZwPS30YYnxwAqFgYGSLDYf-IkT"
+                target="_blank"
+                class="project-link"
                 >🔗 View Project</a
               >
             </div>
