--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             class="project-card"
             style="background-image: url('assets/logophiidev-trans.png')">
             <div class="project-overlay">
-              <h4>E-commerce Web App</h4>
+              <h4 style="color: yellowgreen;">E-commerce Web App</h4>
               <p>
                 A scalable online store built with React.js, Node.js, and
                 Firebase. Includes product management, authentication, and
@@ -271,7 +271,7 @@
             class="project-card"
             style="background-image: url('assets/logophiidev-trans.png')">
             <div class="project-overlay">
-              <h4>Company Dashboard</h4>
+              <h4 style="color: yellowgreen;">Company Dashboard</h4>
               <p>
                 A full-stack web dashboard for managing company operations,
                 developed with Laravel and MySQL, featuring role-based
@@ -285,15 +285,15 @@
 
           <div
             class="project-card"
-            style="background-image: url('assets/logophiidev-trans.png')">
+            style="background-image: url('assets/cctv-assets.jpg')">
             <div class="project-overlay">
-              <h4>Landing Page Website</h4>
+              <h4>IT Documentation</h4>
               <p>
-                A modern responsive portfolio website designed using HTML, CSS,
-                and JavaScript with smooth animations and interactive UI
-                components.
+                A comprehensive guide for IT support tasks, including network
+                setup, hardware troubleshooting, and software installation
+                procedures.
               </p>
-              <a href="#" target="_blank" class="project-link"
+              <a href="https://drive.google.com/drive/folders/14S2ggaZ2xt8oNysFDsguf_dZ8s0VDuRW?usp=sharing" target="_blank" class="project-link"
                 >🔗 View Project</a
               >
             </div>
@@ -308,6 +308,7 @@
                 A personal Instagram page showcasing my design and photography
                 work. It features a curated feed with posts, stories highlights,
                 and contact information.
+                         
               </p>
               <a href="https://www.instagram.com/endlesspersebaya?igsh=MW9rdmsyMzZ0cDRwNg==" target="_blank" class="project-link"
                 >🔗 View Project</a
